Update IntelliJ.md